tests/org.eclipse.php.core.tests/workspace/errors/php54/unfinishedTraitDecl3.pdtt
--TEST--
Test unfinished trait declaration error reporting
--FILE--
<?php
trait A 
?>
--EXPECT--
[line=3, start=15, end=18] syntax error, unexpected 'EOF', expecting '{'